# src/routes/auth.routes.ts
@@ -8,5 +8,6 @@ const router = Router();
 router.post('/register', validateDto(RegisterDto), AuthController.register);
 router.post('/login', AuthController.login);
 router.post('/refresh', AuthController.refresh);
+router.post('/logout', AuthController.logout);
 
 export default router; 
